--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     <nav>
         <a href="./index.html" class="logo"><span class="logo-web">Web</span><span class="logo-studio-one">Studio</span></a>
         <ul class="nav-list">
-            <li><a href="">Studio</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="">Contacts</a></li>
+            <li><a href="" class="studio">Studio</a></li>
+            <li><a href="portfolio.html" class="portfolio">Portfolio</a></li>
+            <li><a href="" class="contacts">Contacts</a></li>
         </ul>
     </nav>
     <address>
         <ul class="adress-list">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111" class="phone-number">+11 (000) 111-11-11</a></li>
         </ul>
     </address>
 </header>
