--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>WebStudio</title>
 </head>
-</body class="body">
-<header class="page-header">
-    <nav>
-        <a href="./index.html" class="logo"><span class="logo-web">Web</span><span class="logo-studio-one">Studio</span></a>
-        <ul class="nav-list">
-            <li><a href="" class="studio">Studio</a></li>
-            <li><a href="portfolio.html" class="portfolio">Portfolio</a></li>
-            <li><a href="" class="contacts">Contacts</a></li>
-        </ul>
-    </nav>
-    <address>
-        <ul class="adress-list">
-            <li><a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111" class="phone-number">+11 (000) 111-11-11</a></li>
-        </ul>
-    </address>
-</header>
+<body class="body">
+    <header class="header">
+        <nav>
+            <a href="./index.html" class="logo"><span class="logo-web">Web</span><span class="logo-studio-one">Studio</span></a>
+            <ul class="nav-list">
+                <li><a href="index.html" class="studio">Studio</a></li>
+                <li><a href="portfolio.html" class="portfolio">Portfolio</a></li>
+                <li><a href="" class="contacts">Contacts</a></li>
+            </ul>
+        </nav>
+        <address class="adress list">
+            <ul>
+                <li><a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="phone-number">+11 (000) 111-11-11</a></li>
+            </ul>
+        </address>
+    </header>
 <main>
     <section class="section-one">
         <h1 class="h-one">Effective Solutions
@@ -37,14 +37,14 @@
         <h2 hidden  class="title-two"></h2>
         <ul class="aboutus">
             <li><h3 class="title-three">Strategy</h3> 
-            <p>Our goal is to identify the business
+            <p class="section-two-text">Our goal is to identify the business
                 problem to walk away with the perfect and creative solution. </p></li>
             <li><h3 class="title-three" >Punctuality</h3> 
-            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
+            <p class="section-two-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
             <li><h3 class="title-three">Diligence</h3> 
-            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
+            <p class="section-two-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
             <li><h3 class="title-three">Technologies</h3> 
-            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
+            <p class="section-two-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
         </ul>
     </section>
     <section class="section-three">
@@ -59,19 +59,19 @@
         <h2  class="section-four-title-two">Our Team</h2>
             
         <ul class="ourteam">
-            <li>
+            <li class="mark">
             <img src="./images/mark.jpg" alt="PhotoMarkGuerrero" width="264" height="260">
             <h3 class="section-four-title-three">Mark Guerrero</h3>
             <p>Product Designer</p></li>
-            <li>
+            <li class="tom">
             <img src="./images/tom.jpg" alt="PhotoTomFord" width="264" height="260">
             <h3 class="section-four-title-three">Tom Ford</h3>
             <p>Frontend Developer</p></li>
-            <li>
+            <li class="camila">
             <img src="./images/camila.jpg" alt="PhotoCamilaGarcia" width="264" height="260">
             <h3 class="section-four-title-three">Camila Garcia</h3>
             <p>Marketing</p></li> 
-            <li>
+            <li class="daniel">
             <img src="./images/daniel.jpg" alt="PhotoDanielWilson" width="264" height="260">
             <h3 class="section-four-title-three">Daniel Wilson</h3>
             <p>UI Designer</p></li>
