--- a/portfolio.html
+++ b/portfolio.html
@@ -14,21 +14,21 @@
     <header class="header">
         <nav>
             <a href="./index.html" class="logo"><span class="logo-web">Web</span><span class="logo-studio-one">Studio</span></a>
-            <ul class="nav list">
-                <li><a href="">Studio</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+            <ul class="nav-list">
+                <li><a href="index.html" class="studio">Studio</a></li>
+                <li><a href="portfolio.html" class="portfolio">Portfolio</a></li>
+                <li><a href="" class="contacts">Contacts</a></li>
             </ul>
         </nav>
         <address class="adress list">
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="phone-number">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
-        <section class="section1">
+        <section class="section-one">
             <h1 hidden></h1>
             <ul>
                 <button type="button" class="button">All</button>
@@ -38,7 +38,7 @@
                 <button type="button" class="button">Marketing</button>
             </ul>
         </section>
-        <section class="section2">
+        <section class="section-two">
             <h2 hidden></h2>
             <ul class="examples">
                 <li>
