--- a/portfolio.html
+++ b/portfolio.html
@@ -10,20 +10,20 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Portfolio</title>
 </head>
-<body class="body">
+<body >
     <header class="header">
         <nav>
             <a href="./index.html" class="logo"><span class="logo-web">Web</span><span class="logo-studio-one">Studio</span></a>
-            <ul class="nav-list">
-                <li><a href="index.html" class="studio">Studio</a></li>
-                <li><a href="portfolio.html" class="portfolio">Portfolio</a></li>
-                <li><a href="" class="contacts">Contacts</a></li>
+            <ul class="nav">
+                <li><a href="index.html" class="nav-list">Studio</a></li>
+                <li><a href="portfolio.html" class="nav-list">Portfolio</a></li>
+                <li><a href="" class="nav-list">Contacts</a></li>
             </ul>
         </nav>
         <address class="adress list">
             <ul>
-                <li><a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111" class="phone-number">+11 (000) 111-11-11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="contact-list">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="contact-list">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
@@ -31,14 +31,12 @@
         <section class="section-one">
             <h1 hidden></h1>
             <ul>
-                <button type="button" class="button">All</button>
-                <button type="button" class="button">Web Site</button>
-                <button type="button" class="button">App</button>
-                <button type="button" class="button">Design</button>
-                <button type="button" class="button">Marketing</button>
+                <li><button type="button" class="button">All</button></li>
+                <li><button type="button" class="button">Web Site</button></li>
+                <li><button type="button" class="button">App</button></li>
+                <li><button type="button" class="button">Design</button></li>
+                <li><button type="button" class="button">Marketing</button></li>
             </ul>
-        </section>
-        <section class="section-two">
             <h2 hidden></h2>
             <ul class="examples">
                 <li>
